Fix breadcrumb alignment

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -164,7 +164,7 @@ button.navbar-toggler {
     }
     padding-top: 0;
     padding-bottom: 0;
-    align-content: center;
+    align-items: center;
     margin-bottom: 0;
 
     a,
